--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 .box {
-    background-color: rgb(226, 217, 217);
+    background-color:white;
     display: block;
     height: 100px;
     position: relative;
